# traji

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  traji-config.cmake.in
docs/: CMakeLists.txt  Doxyfile
examples/: quintic.ipynb  quintic_frenet.ipynb
include/: traji.hpp  traji_impl.hpp
python/: .gitignore  CMakeLists.txt  README.md  setup.py
python/tests/: test_gui.py  test_path.py  test_trajectory.py
python/traji/: CMakeLists.txt  __init__.pxd  __init__.py  _bindings.cxx  _bindings.pyi  _lib.pxd  _lib.pyi  _lib.pyx  _lib2.cxx  decl.pxd  frenet.py  temp.py
src/: Frenet.cpp  HeteroPath.cpp  Path.cpp  Trajectory.cpp
